:sparkles: Helm Harbor 설치

--- a/08.Chart/gitlab/gitlab-values.yaml
+++ b/08.Chart/gitlab/gitlab-values.yaml
@@ -51,7 +51,7 @@ global:
   edition: ee
 
   ## https://docs.gitlab.com/charts/charts/globals#gitlab-version
-  gitlabVersion: "18.4.1"
+  gitlabVersion: "18.3.1"
 
   ## https://docs.gitlab.com/charts/charts/globals#application-resource
   application:
@@ -60,10 +60,10 @@ global:
     allowClusterRoles: true
   ## https://docs.gitlab.com/charts/charts/globals#configure-host-settings
   hosts:
-    domain: hanrara.p-e.kr
+    domain: p-e.kr
     hostSuffix:
     https: true
-    externalIP:
+    externalIP: "192.168.219.91"
     ssh:
     gitlab:
       name: hanrara.p-e.kr
@@ -983,12 +983,12 @@ certmanager-issuer:
 ## Installation of certmananger.
 ## This value replaces `certmanager.install` to allow certmanager schema validation to pass.
 ## See dependencies in Chart.yaml for current version
-installCertmanager: true
+# installCertmanager: true
 
 ## Configuration of jetstack/cert-manager
-certmanager:
-  installCRDs: true
-  nameOverride: certmanager
+# certmanager:
+#   installCRDs: true
+#   nameOverride: certmanager
 
 ## https://docs.gitlab.com/charts/charts/nginx/
 ## https://docs.gitlab.com/charts/architecture/decisions#nginx-ingress
@@ -1414,34 +1414,34 @@ shared-secrets:
 ## See dependencies in Chart.yaml for current version
 gitlab-runner:
   install: false
-  rbac:
-    create: true
-  runners:
-    locked: false
+  # rbac:
+  #   create: true
+  # runners:
+  #   locked: false
     # Set secret to an arbitrary value because the runner chart renders the gitlab-runner.secret template only if it is not empty.
     # The parent/GitLab chart overrides the template to render the actual secret name.
-    secret: "nonempty"
-    config: |
-      [[runners]]
-        [runners.kubernetes]
-        image = "ubuntu:22.04"
-        {{- if .Values.global.minio.enabled }}
-        [runners.cache]
-          Type = "s3"
-          Path = "gitlab-runner"
-          Shared = true
-          [runners.cache.s3]
-            ServerAddress = {{ include "gitlab-runner.cache-tpl.s3ServerAddress" . }}
-            BucketName = "runner-cache"
-            BucketLocation = "us-east-1"
-            Insecure = false
-        {{ end }}
-  podAnnotations:
-    gitlab.com/prometheus_scrape: "true"
-    gitlab.com/prometheus_port: 9252
-  podSecurityContext:
-    seccompProfile:
-      type: "RuntimeDefault"
+  #   secret: "nonempty"
+  #   config: |
+  #     [[runners]]
+  #       [runners.kubernetes]
+  #       image = "ubuntu:22.04"
+  #       {{- if .Values.global.minio.enabled }}
+  #       [runners.cache]
+  #         Type = "s3"
+  #         Path = "gitlab-runner"
+  #         Shared = true
+  #         [runners.cache.s3]
+  #           ServerAddress = {{ include "gitlab-runner.cache-tpl.s3ServerAddress" . }}
+  #           BucketName = "runner-cache"
+  #           BucketLocation = "us-east-1"
+  #           Insecure = false
+  #       {{ end }}
+  # podAnnotations:
+  #   gitlab.com/prometheus_scrape: "true"
+  #   gitlab.com/prometheus_port: 9252
+  # podSecurityContext:
+  #   seccompProfile:
+  #     type: "RuntimeDefault"
 
 traefik:
   install: false
